# SimpleSQL

./: .gitignore  CMakeLists.txt
include/: db.h
spec/: main_spec.rb
src/: db.c  input.c  main.c  node.c  pager.c  row.c  table.c
